# auth_service

./: .env.test  CHANGELOG.md  Makefile  mypy.ini  pyproject.toml  pytest.ini  start_app.py
alembic/: env.py
alembic/versions/: abd99b6ed8ff_initial_data.py
docker/: Dockerfile  docker-compose.local.yml
services/auth_service/: main.py  service.py
services/auth_service/api/: routes.py
services/service_gateway/: main.py
services/service_gateway/api/: routes.py
services/user_service/: dependencies.py  service.py
services/user_service/api/: routes.py
shared/core/: config.py  security.py
shared/db/: database.py  models.py  session.py
shared/db/repositories/: user_repository.py
shared/db/schemas/: user.py
tests/: conftest.py  db_utils.py  test_config.py
tests/integration/: test_api_auth.py  test_user_routes.py
tests/unit/: test_models.py
